# extremum_seeking

./: CMakeLists.txt  README.md  package.xml
include/extremum_seeking/: extremum_seeking_bur.hpp  flux_lines.hpp  observer_based.hpp
launch/: seeking.launch
src/: extremum_seeking_bur.cpp  extremum_seeking_node.cpp  flux_lines.cpp  observer_based.cpp
